# iracing-api

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yaml
examples/: cli.rs
src/: lib.rs  sdk.rs
src/sdk/: unix.rs  win.rs
